--- a/index.html
+++ b/index.html
@@ -434,7 +434,7 @@
         <div class="main_footer_copy">
             
             <p class="m-b-footer"> Seusite - 2023, todos os direitos reservados.</p> 
-            <p class="by"><i class="icon icon-heart-3"></i> Desenvolvido por: <a href="https://github.com/johnnymendes570/" title="Johnny">Loop Nerd</a></p>
+            <p class="by"><i class="icon icon-heart-3"></i> Desenvolvido por: <a href="https://github.com/johnnymendes570/" title="Johnny">Johnny</a></p>
         
         </div>
     </footer>
